src/static/css/pad/form.css
select, .nice-select {
  -webkit-tap-highlight-color: transparent;
  background-color: #fff;
  border-radius: 3px;
  border: 1px solid #ccc;
  box-sizing: border-box;
  clear: both;
  cursor: pointer;
  display: inline-block;
  font-family: inherit;
  font-weight: normal;
  height: 28px;
  line-height: 28px;
  outline: none;
  padding-left: 8px;
  padding-right: 24px;
  position: relative;
  text-align: left !important;
  -webkit-transition: all 0.1s ease-in-out;
  transition: all 0.1s ease-in-out;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  white-space: nowrap;
  min-width: 100px;
  text-transform: capitalize;
}
.nice-select:not(.open):not(:hover):focus {
  border-color: #a5c8ec;
}
.popup .nice-select {
  padding: 4px 24px 4px 8px;
}
.nice-select:hover {
  border-color: #dbdbdb;
}
.nice-select:after {
  border-bottom: 2px solid #999;
  border-right: 2px solid #999;
  content: '';
  display: block;
  height: 5px;
  margin-top: -3px;
  pointer-events: none;
  position: absolute;
  right: 10px;
  top: 50%;
  -webkit-transform-origin: 66% 66%;
  -ms-transform-origin: 66% 66%;
  transform-origin: 66% 66%;
  -webkit-transform: rotate(45deg);
  -ms-transform: rotate(45deg);
  transform: rotate(45deg);
  -webkit-transition: all 0.15s ease-in-out;
  transition: all 0.15s ease-in-out;
  width: 5px;
}
.nice-select.open:after {
  -webkit-transform: rotate(-135deg);
  -ms-transform: rotate(-135deg);
  transform: rotate(-135deg);
}
.nice-select.open .list {
  opacity: 1;
  pointer-events: auto;
  -webkit-transform: scale(1) translateY(0);
  -ms-transform: scale(1) translateY(0);
  transform: scale(1) translateY(0);
}
.nice-select.disabled {
  border-color: #ededed;
  color: #999;
  pointer-events: none;
}
.nice-select.disabled:after {
  border-color: #cccccc;
}
.nice-select.wide {
  width: 100%;
}
.nice-select.wide .list {
  left: 0 !important;
  right: 0 !important;
}
.nice-select.right {
  float: right;
}
.nice-select.right .list {
  left: auto;
  right: 0;
}
.nice-select.small {
  font-size: 12px;
  height: 36px;
  line-height: 34px;
}
.nice-select.small:after {
  height: 4px;
  width: 4px;
}
.nice-select.small .option {
  line-height: 34px;
  min-height: 34px;
}
.nice-select .list {
  display: block;
  background-color: #fff;
  border-radius: 3px;
  box-shadow: 0 0 0 1px rgba(68, 68, 68, 0.11);
  box-sizing: border-box;
  margin-top: 4px;
  opacity: 0;
  overflow: auto;
  padding: 0;
  pointer-events: none;
  position: absolute;
  top: 100%;
  left: 0;
  max-height: 10px;
  -webkit-transform-origin: 50% 0;
  -ms-transform-origin: 50% 0;
  transform-origin: 50% 0;
  -webkit-transform: scale(0.75) translateY(-21px);
  -ms-transform: scale(0.75) translateY(-21px);
  transform: scale(0.75) translateY(-21px);
  -webkit-transition: all 0.2s cubic-bezier(0.5, 0, 0, 1.25), opacity 0.15s ease-out;
  transition: all 0.2s cubic-bezier(0.5, 0, 0.08, 1.10), opacity 0.15s ease-out;
  z-index: 9;
}
.nice-select.reverse .list {
  bottom: calc(100% + 5px);
  top: auto;
}
.toolbar .nice-select .list {
  position: fixed;
  top: auto;
  left: auto;
}
.nice-select .list:hover .option:not(:hover) {
  background-color: transparent !important;
}
.nice-select .option {
  cursor: pointer;
  font-weight: 400;
  line-height: 35px;
  list-style: none;
  min-height: 35px;
  outline: none;
  margin: 0;
  padding-left: 8px;
  padding-right: 8px;
  text-align: left;
  -webkit-transition: all 0.2s;
  transition: all 0.2s;
  text-transform: capitalize;
}
.nice-select .option:hover,.nice-select .option.focus,.nice-select .option.selected.focus {
  background-color: #f6f6f6;
}
.nice-select .option[data-value="dummy"] {
  display: none;
}
.nice-select .option.selected {
  font-weight: bold;
}
.nice-select .option.disabled {
  background-color: transparent;
  color: #999;
  cursor: default;
}
 .no-csspointerevents.nice-select .list {
  display: none;
}
 .no-csspointerevents.nice-select.open .list {
  display: block;
}

